# gpstools

./: .gitignore  Compare_Networks.ipynb  Compare_Networks_2012_Event.ipynb  Compare_Networks_All.ipynb  Demo_JPL.ipynb  Demo_PANGA.ipynb  Demo_SOPAC.ipynb  Demo_UNGL.ipynb  Demo_UNGL_2012_Event.ipynb  Load_TremorDB.ipynb  PBO_bsm_coords.txt  README.md  UTUR_GPS_fits.ipynb  __init__.py  analysis.py  environment-dev.yml  environment.yml  io.py  jpl.py  panga.py  plot.py  pyproject.toml  requirements.txt  sopac.py  ungl.py
.github/workflows/: ci.yaml
analysis/: __init__.py
auxfiles/: __init__.py
auxfiles/panga/: README  sites.csv  sites.json  sitesfull.csv
auxfiles/ungl/: DataHoldings.txt  README  midas.IGS08.txt  midas.NA12.txt
examples/: Compare_Networks.ipynb  SOPAC.ipynb  UTUR_GPS_fits.ipynb
gpstools/: __init__.py
gpstools/analysis/: __init__.py
gpstools/auxfiles/: __init__.py
gpstools/auxfiles/jpl/: readme.md
gpstools/auxfiles/ungl/: DataHoldings.txt  __init__.py  decyr.txt  get_unevada_files.sh  midas.IGS08.txt  midas.IGS14.txt  midas.NA12.txt  station_steps.txt  steps_code2.txt
gpstools/io/: __init__.py  jpl.py  panga.py  sopac.py  ungl.py
gpstools/plot/: __init__.py
io/: __init__.py  jpl.py  panga.py  ungl.py
jpl/data/: TPW2.series
panga/data/: CATHe.csv  CATHn.csv  CATHu.csv  CHZZe.csv  CHZZn.csv  CHZZu.csv  IWACe.csv  IWACn.csv  IWACu.csv  LWCKe.csv  LWCKn.csv  LWCKu.csv  RYMDe.csv  RYMDn.csv  RYMDu.csv  SEASe.csv  SEASn.csv  SEASu.csv  TPW2e.csv  TPW2n.csv  TPW2u.csv
plot/: __init__.py
tests/: test_gpstools.py
tests/data/: HUSB.tenv3  UTUR.tenv3
ungl/: TPW2.NA12.tenv3.txt  decyr.txt  get_unevada_files.sh  gps_functions.py  station_steps.txt  steps_code1.txt  steps_code2.txt
ungl/data/: FTS6.NA12.tenv3  IWAC.NA12.tenv3  LWCK.NA12.tenv3  P397.NA12.tenv3  SEAS.NA12.tenv3  TPW2.IGS08.tenv3  TPW2.IGS08.tenv3.txt  TPW2.NA12.tenv3
