[tool.poetry]
name = "gpstools"
version = "0.1.1"
description = "Python routines for working with GPS time series from a variety of processing centers"
authors = ["Scott Henderson <scottyh@uw.edu>"]
license = "GNU General Public License v3.0"
readme = "README.md"
homepage = "https://github.com/scottyhq/gpstools"
repository = "https://github.com/scottyhq/gpstools"
keywords = ["GPS", "geophysics", "scientific"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1"
numpy = "^1"
scipy = "^1"
matplotlib = "^3"
geopandas = "^0"
statsmodels = "^0"

[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-cov = "^2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
